# hpi-google-timeline

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: decision-record.md
src/google_timeline_parser/: __init__.py  model.py  parse.py
src/google_timeline_parser/formats/: __init__.py  android.py  ios.py
src/my/google_timeline/: parser.py
src/my/location/: google_timeline.py
tests/: test_hpi_location.py  test_hpi_parser.py  test_parser.py  test_private_acceptance.py
tests/fixtures/: android_timeline.json  ios_timeline.json
