[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hpi-google-timeline"
version = "0.1.0"
description = "Source-faithful parsing and HPI adapters for Google Timeline phone exports"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "AndrewSB"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
hpi = ["HPI>=0.7.20250911"]
test = ["pytest>=8"]

[project.urls]
Repository = "https://github.com/AndrewSB/hpi-google-timeline"

[tool.hatch.build.targets.wheel]
packages = ["src/google_timeline_parser", "src/my"]

[tool.pytest.ini_options]
testpaths = ["tests"]

